test/sema/generics/out_param_as_generic_argument.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S<T> {}

// CHECK: [[# @LINE + 1 ]]:13: error: only parameters can have '&' type
fn foo(x: S<&number>) {}

fn main() {}
